--- a/index.html
+++ b/index.html
@@ -16,6 +16,6 @@
   <canvas id="gameCanvas" width="600" height="600"></canvas>
   <div id="chat"></div>
   <input type="text" id="chatInput" placeholder="Написать сообщение..." />
-  <script src="game.js"></script>
+  <script src="Game.js"></script>
 </body>
 </html>
